<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.corona.CoronaActivity">

    <com.azikus.taplistenerexamples.ui.shared.BottomCornersAppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:animateLayoutChanges="true"
        android:layout_height="wrap_content"
        app:radius="16dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimarySurface"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="48dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/countrySelectorLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/corona_screen_country_hint">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/countrySelector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="false"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/provinceSelectorLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:hint="@string/corona_screen_province_hint">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/provinceSelector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/citySelectorLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:hint="@string/corona_screen_city_hint">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/citySelector"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.azikus.taplistenerexamples.ui.shared.BottomCornersAppBarLayout>

    <include layout="@layout/content_corona" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
